--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -70,7 +70,7 @@
             width: 230px;
         }
         &--2 {
-            width: 100%;
+            width: 100% !important;
         }
         &-file {
             opacity: 0;
