--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -4,6 +4,11 @@
 .u_center_text {
     text-align: center;
 }
+.text__decoration {
+    &-none {
+        text-decoration: none;
+    }
+}
 .flex {
     display: flex;
 }
@@ -18,6 +23,7 @@
 .uppercase {
     text-transform: uppercase;
 }
+
 .bold {
     font-weight: 900;
 }
@@ -27,6 +33,9 @@
     }
     &--small {
         margin-bottom: 10px;
+    }
+    &--none {
+        margin-bottom: 0 !important;
     }
 }
 .margin {
