--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -36,7 +36,7 @@
             display: flex;
             align-items: center;
             width: 370px;
-            padding: 10px 15px;
+            padding: 0px 15px 10px 0;
         }
 
         &--3 {
