--- a/css/style.css
+++ b/css/style.css
@@ -1003,7 +1003,8 @@ body {
     display: flex;
     align-items: center;
     width: 370px;
-    padding: 0px 15px 10px 0; }
+    padding: 0px 15px 10px 0;
+    margin-top: -27px; }
   .form__group--3 {
     width: 80% !important; }
   .form__group-sm {
