--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -37,6 +37,7 @@
             align-items: center;
             width: 370px;
             padding: 0px 15px 10px 0;
+            margin-top: -27px;
         }
 
         &--3 {
