--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -32,12 +32,11 @@
             align-items: center;
         }
         &--2 {
-            margin-bottom: 15px;
+            // margin-bottom: 15px;
             display: flex;
             align-items: center;
-            width: 370px;
-            padding: 0px 15px 10px 0;
-            margin-top: -27px;
+            // width: 370px;
+            // padding: 0px 15px 10px 0;
         }
 
         &--3 {
@@ -148,8 +147,10 @@
         &__group {
             width: 270px;
 
-            &--2 {
-                width: 270px;
+            &-remember.flex {
+                flex-direction: column;
+                align-items: flex-start;
+                margin-bottom: 15px;
             }
         }
         &__input {
