--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./components/multistep-form";
 @import "./components/customCheckbox";
 @import "./components/list";
+@import "./components/accordion";
 @import "./layout/header";
 @import "./layout/general";
 @import "./layout/footer";
@@ -20,3 +21,4 @@
 @import "./pages/signin";
 @import "./pages/terms";
 @import "./pages/contact";
+@import "./pages/faq";
