--- a/scss/pages/_faq.scss
+++ b/scss/pages/_faq.scss
@@ -1,10 +1,10 @@
 .faq {
     &__header {
-        height: 15vh;
+        // height: 15vh;
         background-color: $color-white;
     }
     &__main {
-        min-height: 70vh;
+        // min-height: 70vh;
         display: grid;
         grid-template-columns: 1fr 2fr;
     }
@@ -76,7 +76,7 @@
 @media screen and (min-height: 850px) {
     .faq {
         &__header {
-            height: 9vh;
+            // height: 9vh;
         }
     }
 }
