--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,9 @@ body {
   .heading__primary {
     line-height: 1.2; }
   .heading__tertiary {
-    font-size: 24px; } }
+    font-size: 24px; }
+  .text__primary--4 {
+    font-size: 14px; } }
 
 @media screen and (max-width: 576px) {
   .heading__primary {
@@ -700,6 +702,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center; }
+  .flex--3 {
+    display: flex; }
 
 .hr {
   border: 0;
