--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -243,6 +243,13 @@
             font-size: 24px;
         }
     }
+    .text {
+        &__primary {
+            &--4 {
+                font-size: 14px;
+            }
+        }
+    }
 }
 
 @media screen and (max-width: 576px) {
